refactor: update page titles and branding, enhance HTML structure, and improve code comments for clarity

--- a/exercises.html
+++ b/exercises.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WeCode | Exercises</title>
+  <title>Ohad’s WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-exercises fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
+
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
+
     <ul class="nav-menu" id="navMenu">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -34,43 +39,43 @@
 
   <!-- Module List -->
   <section style="display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 1: Foundations &amp; Modern C++</h2>
       <p>RAII, smart pointers, lambdas, and best practices.</p>
       <a href="module1.html" class="btn">Go to Module 1</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 2: Data Structures &amp; Algorithms</h2>
       <p>Arrays, linked lists, trees, sorting, searching, BFS/DFS, etc.</p>
       <a href="module2.html" class="btn">Go to Module 2</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 3: Real-Time &amp; Embedded</h2>
       <p>RTOS fundamentals, interrupts, debugging, concurrency in embedded.</p>
       <a href="module3.html" class="btn">Go to Module 3</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 4: Concurrency &amp; Multithreading</h2>
       <p>Threads, mutexes, lock-free, concurrency patterns in modern C++.</p>
       <a href="module4.html" class="btn">Go to Module 4</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 5: Memory &amp; Debugging</h2>
       <p>Manual vs. smart pointers, custom allocators, debugging tools.</p>
       <a href="module5.html" class="btn">Go to Module 5</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 6: Templates &amp; Metaprogramming</h2>
       <p>SFINAE, type traits, compile-time programming techniques.</p>
       <a href="module6.html" class="btn">Go to Module 6</a>
     </div>
 
-    <div class="course-module glass card-hover tilt-card" style="width:300px; text-align:center;">
+    <div class="course-module glass card-hover" style="width:300px; text-align:center;">
       <h2>Module 7: System Design &amp; Advanced</h2>
       <p>Design patterns, high-level architecture, scalable interview scenarios.</p>
       <a href="module7.html" class="btn">Go to Module 7</a>
@@ -79,7 +84,7 @@
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
 <script src="scripts/main.js"></script>
