--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WeCode | Home</title>
+  <title>Ohad’s WeCode | Home</title>
   <!-- Main Styles -->
   <link rel="stylesheet" href="styles/style.css">
   <!-- Animations -->
@@ -13,12 +13,19 @@
 
 <header>
   <div class="nav-container">
+    <!-- Brand and Name -->
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
+
     <!-- Hamburger Menu -->
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
+
+    <!-- Nav Menu -->
     <ul class="nav-menu" id="navMenu">
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -32,7 +39,7 @@
 <main class="page-content">
   <!-- HERO SECTION -->
   <section class="hero-section glass hero-slide-in">
-    <h1 class="hero-title fancy-title">WeCode</h1>
+    <h1 class="hero-title fancy-title">Welcome to WeCode</h1>
     <p class="hero-subtitle">
       Elevate Your C++ Skills with advanced modules, real-time progress, 
       integrated quizzes, and a top-tier UI experience.
@@ -42,17 +49,17 @@
 
   <!-- FEATURES SECTION -->
   <section class="features fade-in">
-    <div class="feature-card glass card-hover tilt-card">
+    <div class="feature-card glass card-hover">
       <h2>Robust Syllabus</h2>
       <p>Master concurrency, embedded, memory, and more—targeted for real interviews.</p>
     </div>
-    <div class="feature-card glass card-hover tilt-card">
+    <div class="feature-card glass card-hover">
       <h2>Hands-On IDE</h2>
       <p>Practice code in your browser. No setup overhead—just pure learning.</p>
     </div>
-    <div class="feature-card glass card-hover tilt-card">
+    <div class="feature-card glass card-hover">
       <h2>Progress &amp; Quizzes</h2>
-      <p>Track achievements, run timed quizzes, and see your own local leaderboard!</p>
+      <p>Track achievements, run timed quizzes, and see your local leaderboard!</p>
     </div>
   </section>
 
@@ -60,14 +67,14 @@
   <section class="cta glass fade-in">
     <h2>Prepare for Your Next Interview</h2>
     <p class="cta-desc">
-      Join WeCode and gain the competitive edge you need for modern C++ interviews.
+      Join Ohad’s WeCode and gain the competitive edge you need for modern C++ interviews.
     </p>
     <a href="exercises.html" class="btn">Explore Modules</a>
   </section>
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 
 <!-- Scroll-To-Top Button -->
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
