--- a/module6.html
+++ b/module6.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WeCode | Module 6</title>
+  <title>Ohad’s WeCode | Module 6</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-module fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -27,14 +30,13 @@
 </header>
 
 <main class="page-content">
-  <!-- Breadcrumb -->
   <div class="breadcrumb">
     <a href="index.html">Home</a> <span>&gt;</span>
     <a href="exercises.html">Exercises</a> <span>&gt;</span>
     <span>Module 6</span>
   </div>
 
-  <section class="glass module-lessons tilt-card">
+  <section class="glass module-lessons">
     <h1 class="fancy-title">Module 6: Templates &amp; Metaprogramming</h1>
     <p>Advanced template programming, SFINAE, type traits, and compile-time computations in C++.</p>
 
@@ -57,7 +59,7 @@
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
 <script src="scripts/main.js"></script>
