--- a/module7.html
+++ b/module7.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WeCode | Module 7</title>
+  <title>Ohad’s WeCode | Module 7</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-module fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -34,7 +37,7 @@
     <span>Module 7</span>
   </div>
 
-  <section class="glass module-lessons tilt-card">
+  <section class="glass module-lessons">
     <h1 class="fancy-title">Module 7: System Design &amp; Advanced Topics</h1>
     <p>Design patterns, high-level architecture, and advanced scenarios relevant to C++ interviews.</p>
 
