--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WeCode | Portfolio</title>
+  <title>Ohad’s WeCode | Portfolio</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-portfolio fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
+
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -28,33 +32,33 @@
 <main class="page-content">
   <h1 class="fancy-title">Meet the Developer</h1>
   <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
-    Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux.
+    Hello, I’m <strong>Ohad</strong>, an RT Embedded Engineer specializing in C/C++ on Linux.
     This platform is my advanced learning and portfolio demonstration—bridging
     real-time embedded topics with modern C++ for a professional, interview-focused skill set.
   </p>
 
-  <div class="portfolio-highlights" style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
-    <div class="highlight-card glass card-hover tilt-card" style="width:300px;">
+  <div style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
+    <div class="glass card-hover" style="width:300px; padding:16px;">
       <h2>Background</h2>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>B.Sc. in Computer Science / Electronics Engineering</li>
         <li>10+ years in embedded software development</li>
         <li>Expert in real-time systems &amp; OS internals</li>
       </ul>
     </div>
 
-    <div class="highlight-card glass card-hover tilt-card" style="width:300px;">
+    <div class="glass card-hover" style="width:300px; padding:16px;">
       <h2>Focus Areas</h2>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>Low-level C/C++ programming</li>
         <li>Multithreading &amp; concurrency</li>
         <li>Performance tuning &amp; memory optimization</li>
       </ul>
     </div>
 
-    <div class="highlight-card glass card-hover tilt-card" style="width:300px;">
+    <div class="glass card-hover" style="width:300px; padding:16px;">
       <h2>Project Goals</h2>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>Advanced modules for challenging C++ interviews</li>
         <li>In-browser IDE with real-time solution checking</li>
         <li>Showcase a professional portfolio &amp; technical background</li>
@@ -65,6 +69,7 @@
   <div style="text-align:center; margin-top:40px;">
     <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
     <a href="resume.html" class="icon-btn" title="View Resume">
+      <!-- Example "file" icon (Simple Icons) -->
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/file.svg" alt="Resume Icon" style="width:24px;height:24px;">
     </a>
   </div>
@@ -72,16 +77,16 @@
   <div style="text-align:center; margin-top:30px;">
     <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
     <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub" style="width:24px;height:24px;">
     </a>
     <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn" style="width:24px;height:24px;">
     </a>
   </div>
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
