--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WeCode | Resume</title>
+  <title>Ohad’s WeCode | Resume</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-resume fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
+
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -26,94 +30,94 @@
 </header>
 
 <main class="page-content">
-  <section class="resume-section glass tilt-card" style="max-width:900px; margin:0 auto;">
-    <h2 class="fancy-title">Resume - Ohad Alon</h2>
-    <div class="contact-info">
-      <p><strong>Address:</strong> Herzliya, Israel</p>
+  <section class="resume-section glass" style="max-width:900px; margin:0 auto; padding:30px;">
+    <h2 class="fancy-title">Ohad Alon - Resume</h2>
+    <div class="contact-info" style="margin-bottom:20px;">
+      <p><strong>Location:</strong> Herzliya, Israel</p>
       <p><strong>Phone:</strong> +972-53-2428862</p>
       <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
     </div>
 
-    <h3>Profile</h3>
-    <p>
+    <h3 style="margin-top:1.5em;">Profile</h3>
+    <p style="margin-bottom:1.2em;">
       Accomplished Senior Embedded Software Developer with extensive experience
       designing real-time systems, optimizing embedded software architectures, 
-      and delivering reliable, innovative solutions for complex projects.
+      and delivering reliable, innovative solutions for complex projects. 
       Demonstrates expertise in cybersecurity protocols, AI integration, and mentoring
       diverse teams.
     </p>
-    <hr/>
+    <hr style="margin:1.2em 0;"/>
 
-    <h3>Work Experience</h3>
-    <article class="job">
+    <h3 style="margin-top:1.5em;">Work Experience</h3>
+    <article class="job" style="margin-bottom:1.5em;">
       <h4>Senior Software Developer - CYMOTIVE Technologies (02/2022 – present)</h4>
-      <ul>
-        <li>Designed secure communication protocols and enhanced system reliability with cryptographic solutions.</li>
+      <ul style="margin-left:20px;">
+        <li>Designed secure communication protocols with cryptographic solutions.</li>
         <li>Overhauled software architecture for improved data flow efficiency and scalability.</li>
-        <li>Developed advanced support tools simplifying diagnostic workflows and accelerating delivery times.</li>
-        <li>Collaborated with stakeholders, translating technical requirements into functional designs.</li>
+        <li>Developed advanced support tools simplifying diagnostic workflows.</li>
+        <li>Collaborated with stakeholders to translate technical requirements into functional designs.</li>
       </ul>
     </article>
 
-    <article class="job">
+    <article class="job" style="margin-bottom:1.5em;">
       <h4>Software Developer - Brodmann17 (01/2021 – 02/2022)</h4>
-      <ul>
-        <li>Led development of AI solutions, improving object detection accuracy in automotive applications.</li>
+      <ul style="margin-left:20px;">
+        <li>Led AI solution development, improving object detection accuracy in automotive applications.</li>
         <li>Optimized algorithms for real-time performance under demanding conditions.</li>
         <li>Integrated AI capabilities into client platforms, enhancing reliability.</li>
         <li>Coordinated teams to meet strict deadlines, achieving consistent project success.</li>
       </ul>
     </article>
 
-    <article class="job">
+    <article class="job" style="margin-bottom:1.5em;">
       <h4>Senior Embedded Software Developer - Ceragon Networks (11/2016 – 01/2021)</h4>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>Architected embedded software solutions for advanced telecommunications systems.</li>
-        <li>Developed task-scheduling mechanisms improving resource utilization and reducing delays.</li>
+        <li>Developed task-scheduling mechanisms for better resource utilization.</li>
         <li>Resolved complex interoperability issues between software and hardware components.</li>
         <li>Provided mentorship to junior developers, fostering a learning culture.</li>
       </ul>
     </article>
 
-    <article class="job">
+    <article class="job" style="margin-bottom:1.5em;">
       <h4>Software Developer - Experis Israel (04/2016 – 10/2016)</h4>
-      <ul>
-        <li>Developed efficient embedded software for multiple projects within strict deadlines.</li>
+      <ul style="margin-left:20px;">
+        <li>Developed efficient embedded software under strict deadlines.</li>
         <li>Specialized in low-level C programming and real-time debugging tools.</li>
       </ul>
     </article>
-    <hr/>
+    <hr style="margin:1.2em 0;"/>
 
-    <h3>Education</h3>
-    <article class="education">
+    <h3 style="margin-top:1.5em;">Education</h3>
+    <article class="education" style="margin-bottom:1.5em;">
       <h4>Bachelor’s in Electrical and Electronics Engineering - Ruppin Academic Center (2010–2014)</h4>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>Designed an embedded system for data acquisition, focusing on energy efficiency.</li>
         <li>Excelled in embedded systems design, signal processing, and low-level software engineering.</li>
       </ul>
     </article>
-    <hr/>
+    <hr style="margin:1.2em 0;"/>
 
-    <h3>Key Projects</h3>
-    <article class="project">
+    <h3 style="margin-top:1.5em;">Key Projects</h3>
+    <article class="project" style="margin-bottom:1.2em;">
       <h4>Automotive Cybersecurity Framework</h4>
-      <ul>
-        <li>Designed secure communication mechanisms for automotive systems.</li>
-        <li>Deployed streamlined diagnostic tools addressing operational bottlenecks.</li>
+      <ul style="margin-left:20px;">
+        <li>Implemented secure communication mechanisms for automotive systems.</li>
+        <li>Deployed diagnostic tools addressing operational bottlenecks.</li>
       </ul>
     </article>
 
-    <article class="project">
+    <article class="project" style="margin-bottom:1.2em;">
       <h4>AI-Based Automotive Object Detection</h4>
-      <ul>
+      <ul style="margin-left:20px;">
         <li>Integrated AI-driven object detection solutions into client systems.</li>
         <li>Improved detection accuracy and performance in real-world scenarios.</li>
       </ul>
     </article>
-    <hr/>
+    <hr style="margin:1.2em 0;"/>
 
-    <h3>Skills</h3>
-    <ul>
+    <h3 style="margin-top:1.5em;">Skills</h3>
+    <ul style="margin-left:20px;">
       <li><strong>Embedded Systems:</strong> Real-Time OS, Hardware-Software Integration</li>
       <li><strong>Languages:</strong> C, C++ (English/Hebrew speaking)</li>
       <li><strong>Cybersecurity:</strong> Cryptographic Protocols, Secure Design</li>
@@ -125,7 +129,7 @@
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
