--- a/resources.html
+++ b/resources.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WeCode | Resources</title>
+  <title>Ohad’s WeCode | Resources</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-resources fade-in">
 <header>
   <div class="nav-container">
+    <div class="brand-area">
+      <span class="brand-title">Ohad’s WeCode</span>
+    </div>
+
     <div class="menu-toggle" id="menuToggle">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -32,42 +36,31 @@
     your understanding of modern C++ and related fields.
   </p>
 
-  <div class="resource-list" style="display:flex;flex-wrap:wrap;gap:24px;justify-content:center;">
-    <div class="resource-item glass card-hover tilt-card" style="width:280px;">
+  <div style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
+    <div class="glass card-hover" style="width:280px; padding:16px;">
       <h2>cppreference.com</h2>
       <p>Comprehensive documentation on C++ language features and the standard library.</p>
       <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
     </div>
 
-    <div class="resource-item glass card-hover tilt-card" style="width:280px;">
+    <div class="glass card-hover" style="width:280px; padding:16px;">
       <h2>isocpp.org</h2>
       <p>Official C++ standardization updates, guidelines, and community news.</p>
       <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
     </div>
 
-    <div class="resource-item glass card-hover tilt-card" style="width:280px;">
+    <div class="glass card-hover" style="width:280px; padding:16px;">
       <h2>Learn C++</h2>
       <p>Advanced tutorials, best practices, and in-depth C++ articles.</p>
       <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
     </div>
-
-    <div class="resource-item glass card-hover tilt-card" style="width:280px;">
-      <h2>Boost Libraries</h2>
-      <p>Peer-reviewed portable C++ source libraries, widely used in the industry.</p>
-      <a href="https://www.boost.org/" target="_blank" class="btn">Explore Boost</a>
-    </div>
-
-    <div class="resource-item glass card-hover tilt-card" style="width:280px;">
-      <h2>Embedded Artistry</h2>
-      <p>Articles, tips, and best practices for embedded C++ development.</p>
-      <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit Site</a>
-    </div>
+    
+    <!-- Add more resource items as desired -->
   </div>
 </main>
 
 <footer></footer>
-<p>© 2025 WeCode. All rights reserved.</p>
-
+<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
