refactor: simplify HTML structure, enhance content clarity, and improve accessibility features

--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Home</title>
-
-  <!-- The single advanced stylesheet -->
-  <link rel="stylesheet" href="styles/style.css"/>
-  <!-- You can keep animations in the same file or separate -->
-  <link rel="stylesheet" href="styles/animations.css"/> 
-  <!-- If you used that approach, or just put everything in style.css -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-home fade-in">
 <header>
   <div class="nav-container">
-    <!-- Brand -->
     <div class="brand-area">Ohad’s WeCode</div>
-
-    <!-- Nav Menu -->
     <ul class="nav-menu">
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -29,17 +21,17 @@
 </header>
 
 <main class="page-content">
-  <!-- HERO SECTION -->
+  <!-- HERO -->
   <section class="hero-section card slide-up">
     <h1 class="hero-title">Welcome to WeCode</h1>
     <p class="hero-subtitle">
-      Elevate Your C++ Skills with advanced modules, real-time progress, 
+      Elevate Your C++ Skills with advanced modules, real-time progress,
       integrated quizzes, and a top-tier UI experience.
     </p>
     <a href="exercises.html" class="btn">Get Started</a>
   </section>
 
-  <!-- FEATURES SECTION -->
+  <!-- FEATURES -->
   <section class="features fade-in">
     <div class="feature-card card">
       <h2>Robust Syllabus</h2>
@@ -55,7 +47,7 @@
     </div>
   </section>
 
-  <!-- CTA SECTION -->
+  <!-- CTA -->
   <section class="cta card fade-in">
     <h2>Prepare for Your Next Interview</h2>
     <p class="cta-desc">
@@ -68,11 +60,7 @@
 <footer>
   © 2025 Ohad’s WeCode. All rights reserved.
 </footer>
-
-<!-- Scroll to top button -->
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-
-<!-- Scripts -->
 <script src="scripts/main.js"></script>
 </body>
 </html>
