--- a/resources.html
+++ b/resources.html
@@ -5,21 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ohad’s WeCode | Resources</title>
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-resources fade-in">
 <header>
   <div class="nav-container">
-    <div class="brand-area">
-      <span class="brand-title">Ohad’s WeCode</span>
-    </div>
-
-    <div class="menu-toggle" id="menuToggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <ul class="nav-menu" id="navMenu">
+    <div class="brand-area">Ohad’s WeCode</div>
+    <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -30,37 +21,49 @@
 </header>
 
 <main class="page-content">
-  <h1 class="fancy-title">Learning Resources</h1>
-  <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
+  <h1>Learning Resources</h1>
+  <p style="text-align:center; max-width:700px; margin: 0 auto 30px;">
     Explore curated references, tutorials, and external links to deepen
     your understanding of modern C++ and related fields.
   </p>
 
-  <div style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
-    <div class="glass card-hover" style="width:280px; padding:16px;">
+  <div class="resources-grid fade-in">
+    <div class="resource-card card">
       <h2>cppreference.com</h2>
       <p>Comprehensive documentation on C++ language features and the standard library.</p>
       <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
     </div>
-
-    <div class="glass card-hover" style="width:280px; padding:16px;">
+    <div class="resource-card card">
       <h2>isocpp.org</h2>
       <p>Official C++ standardization updates, guidelines, and community news.</p>
       <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
     </div>
-
-    <div class="glass card-hover" style="width:280px; padding:16px;">
+    <div class="resource-card card">
       <h2>Learn C++</h2>
-      <p>Advanced tutorials, best practices, and in-depth C++ articles.</p>
+      <p>Advanced tutorials, best practices, and in-depth articles on C++ programming.</p>
       <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
     </div>
-    
-    <!-- Add more resource items as desired -->
+    <div class="resource-card card">
+      <h2>Boost Libraries</h2>
+      <p>Peer-reviewed portable C++ source libraries, widely used in industry.</p>
+      <a href="https://www.boost.org/" target="_blank" class="btn">Explore Boost</a>
+    </div>
+    <div class="resource-card card">
+      <h2>Embedded Artistry</h2>
+      <p>Articles, tips, and best practices for embedded C++ development.</p>
+      <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit Site</a>
+    </div>
+    <div class="resource-card card">
+      <h2>C++ Weekly (YouTube)</h2>
+      <p>Jason Turner's popular channel focusing on modern C++ tips and tricks.</p>
+      <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Watch Channel</a>
+    </div>
   </div>
 </main>
 
-<footer></footer>
-<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
+<footer>
+  © 2025 Ohad’s WeCode. All rights reserved.
+</footer>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
